# obsidian-headless

./: .gitignore  AGENTS.md  README.md  config.yaml  devenv.nix  main.py  pyproject.toml  requirements.txt
obsidian_headless/: __init__.py  main.py
templates/: daily_note.md.jinja
tests/: test_daily_note.py  test_main.py  test_patch_unified.py
