[tool.poetry]
name = "obsidian-headless"
version = "0.1.0"
description = "Minimal API to read/write/patch files in an Obsidian vault."
authors = ["Ivan Zatevakhin"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "0.116.1"
uvicorn = {extras = ["standard"], version = "0.35.0"}
click = "8.2.1"
python-multipart = "0.0.20"
Jinja2 = "3.1.6"
httpx = "0.28.1"
fastmcp = "2.11.2"
whatthepatch = "^1.0.7"
[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
requests = "2.32.4"
httpx = "0.28.1"
ruff = "0.12.8"

[tool.poetry.scripts]
obsidian-headless = "obsidian_headless.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
